Related: fdo#56554 fix multi-script html field export

Change-Id: I05257bed8161e0a63814c9a563d79e5750f626ff
(cherry picked from commit 4c49af256a456af48f0b29262c0b23aa1f6a9cd5)

Signed-off-by: Lior Kaplan <kaplanlior@gmail.com>